# game-of-life

./: CMakeLists.txt  main.cpp
forms/: cell.ui  mainwindow.ui
include/: celldelegate.hpp  livingcell.hpp
include/Widgets/: cell.hpp  gameboard.hpp  mainwindow.hpp
resources/: icons.qrc
src/: cell.cpp  celldelegate.cpp  gameboard.cpp  livingcell.cpp  mainwindow.cpp
